gcc/testsuite/rust/rustc/ui/parser/removed-syntax-field-let.rs
struct S {
    let foo: (),
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

